--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off">
+          <form class="img-upload__form" method ="post" action ="https://31.javascript.htmlacademy.pro/kekstagram" id="upload-select-image" enctype = "multipart/form-data" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -253,6 +253,8 @@
   </script> -->
   <script src="/js/main.js" type="module">
   </script>
+  <script src ="vendor/pristine/pristine.min.js"></script>
+  <script src ="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
 </body>
 
 </html>
