--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
   </template>
 <!--   <script src="/js/functions.js">
   </script> -->
+  <script src ="vendor/pristine/pristine.min.js"></script>
+  <script src ="vendor/nouislider/nouislider.js"></script>
   <script src="/js/main.js" type="module">
   </script>
-  <script src ="vendor/pristine/pristine.min.js"></script>
-  <script src ="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
 </body>
 
 </html>
